--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,7 +27,8 @@ classifiers = [
 requires-python = ">=3.8"
 dependencies = [
     "langchain-core>=0.1.0",
-    "pyreindexer>=0.5.0"
+    "pyreindexer>=0.5.0",
+    "numpy>=2.4.1"
 ]
 
 [project.optional-dependencies]
