--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,31 +4,31 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "langchain-reindexer"
-version = "0.1.0"
+version = "0.1.1"
 description = "Reindexer vector store integration for LangChain"
 readme = "README.md"
 authors = [
     {name = "Parviz Mirzoev", email = "parviz.mirzoev@restream.ru"}
 ]
-license = {text = "GPL-3.0"}
+license = {text = "Apache-2.0"}
 classifiers = [
     "Development Status :: 4 - Beta",
     "Intended Audience :: Developers",
-    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
+    "License :: OSI Approved :: Apache Software License",
     "Programming Language :: Python :: 3",
-    "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3.13",
     "Topic :: Scientific/Engineering :: Artificial Intelligence",
     "Topic :: Software Development :: Libraries :: Python Modules"
 ]
-requires-python = ">=3.8"
+requires-python = ">=3.9"
 dependencies = [
     "langchain-core>=0.1.0",
     "pyreindexer>=0.5.0",
-    "numpy>=2.4.1"
+    "numpy>=2.0.2"
 ]
 
 [project.optional-dependencies]
